--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portofolio">Portofolio</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{%url 'admin:index' %}">Admin</a>
+                    </li>
                 </ul>
             </div>
         </div>
